--- a/flask-tutorial/flaskr/templates/auth/login.html
+++ b/flask-tutorial/flaskr/templates/auth/login.html
@@ -7,7 +7,6 @@
     <title>Document</title>
   </head>
   <body>
-    <h1>LOL!🤩</h1>
-    <h2>there's no page👻</h2>
+    <h1>Login🤩</h1>
   </body>
 </html>
